# ai-shop-os

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDEAS.md  LICENSE  NEXT_TASK.md  PROJECT_GUIDE.md  PROJECT_RECOVERY.md  PROJECT_STATE.md  README.md  SECURITY.md  docker-compose.production.yml  package-lock.json  package.json  railway.json  render.yaml
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/application/: __init__.py  agent_routing.py  use_cases.py
apps/api/app/domain/: __init__.py  agent_routing.py  ceo_report.py  commerce_dataset.py  commerce_imports.py  daily_operations.py  live_operations.py  market_intelligence.py  models.py  refund_collaboration.py  replay.py  repositories.py  strategy.py  validation.py
apps/api/app/infrastructure/: __init__.py  after_sale_decision_workflow.py  agent_runtime_provider.py  approval_records.py  ceo_report_engine.py  ceo_report_snapshot_store.py  commerce_catalog.py  commerce_connectors.py  commerce_dataset_readiness.py  config.py  customer_reply_engine.py  daily_operations_data_provider.py  database.py  (+24 more)
apps/api/tests/: test_ceo_daily_report.py  test_ceo_report_snapshots.py  test_commerce_imports.py  test_daily_operations_data_provider.py  test_daily_operations_job.py  test_health.py  test_live_metric_snapshots.py  test_live_operations_and_savings.py  test_market_intelligence.py  test_production_bootstrap.py  test_refund_collaboration_workflow.py  test_replay_engine.py  test_strategy_audit.py  test_validation_engines.py
(+163 files in other folders)
