[project]
name = "ai-shop-os-api"
version = "0.1.0"
description = "AI Shop OS FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.34",
  "psycopg[binary]>=3.2.1",
  "pytest>=8.3.0",
  "httpx>=0.28.0,<1.0.0",
  "langgraph>=1.2.6,<2.0.0",
  "redis>=7.3.0,<8.0.0",
  "rq>=2.10.0,<3.0.0",
  "cryptography>=49.0.0,<50.0.0",
  "openpyxl>=3.1.0,<4.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["apps/api/tests"]
